@@ -1,0 +1,11 @@
+language: python
+python:
+  - "2.7"
+  - "3.2"
+  - "3.4"
+# command to install dependencies
+install:
+  - pip install -r test-requirements.txt
+# command to run tests
+script:
+  - nosetests
