@@ -1,5 +1,5 @@
 [captainhook]
-pdb:on
+pdb:on;--ignore=test/files/pdb_errors.py --ignore=test/test_checkers/test_pdb.py
 flake8:on
 python3:on
-grep:on;--exclude="pdb_checker.py" --exclude="README.md" --exclude="PKG-INFO" -I pdb.set_trace
+grep:off
